# PyPDF-Tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  main.py  ocr_module.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini  utils.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: build-appimage.yml  build-packages.yml  ci.yml  label_pr.yml  release.yml  tests.yml
cli/: __init__.py  cli_handler.py
docs/: AppImage-USAGE.md  api-reference.md  developer-guide.md  installation.md  troubleshooting.md  user-guide.md
features/: __init__.py  automation_engine.py  language_installer.py  script_engine.py
reguirements/: dev.txt  test.txt
resources/: __init__.py  pdf_utils.py
scripts/: build-appimage.sh  install-windows.ps1  install.sh
src/cli/: cli_handler.py
src/features/: __init__.py  pdf_viewer.py
src/pypdf_tools/: __init__.py  _version.py  main.py
src/pypdf_tools/features/: __init__.py
tests/: __init__.py  test_app.py  test_appimage.sh  test_bridge.py
ui/: __init__.py  content.py  header.py  settings_dialog.py  sidebar.py  welcome_wizard.py
web/: package.json  tailwind.config.js  vite.config.js
web/public/: index.html
web/src/: App.css  App.jsx
web/src/components/: EmbeddedPDFViewer.jsx
